<resources>
    <string name="app_name">Social Login Sample</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">193822177684216</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="action_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="action_sign_in_with_instagram">Sign in with Instagram</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <string name="logged_in">Logged In!</string>
    <string name="login_error">Error during login</string>
    <string name="username_email_address">Username/Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_your_password">Forgot Your password?</string>
    <string name="sign_up_now">Sign up now</string>
</resources>
